# mtl-classy-prism

./: README.MD  default.nix  mtl-classy-prism.cabal  nixpkgs.json  shell.nix
resources/: application.dhall
resources/test/ipip/: big5result-slim.html  big5result.html
src/app/: Main.hs
src/lib/: Bootstrap.hs  Config.hs  Prelude.hs  Types.hs
src/lib/Bot/: Client.hs  Types.hs
src/lib/Ipip/: Parsers.hs  Types.hs
src/test/: ConfigTest.hs  Utils.hs  tests.hs
src/test/Bot/: TypeTest.hs
src/test/Ipip/: ParserTest.hs
