cabal-version:          2.2
name:                   mtl-classy-prism
version:                0.1.0.0
synopsis:               Extract html content
build-type:             Simple
data-dir:               resources
author:                 Amy
maintainer:             amy@justfrog.com

common lang
  default-extensions: OverloadedStrings
                    , RecordWildCards
                    , BlockArguments

common deps
  build-depends:        base-noprelude
                      , aeson
                      , attoparsec
                      , dhall
                      , email-validate
                      , email-validate-json
                      , exceptions
                      , http-client
                      , http-client-tls
                      , http-types
                      , lens
                      , mtl
                      , optparse-applicative
                      , protolude
                      , servant
                      , servant-client
                      , tagsoup
                      , text

library
  import:               lang, deps
  hs-source-dirs:       src/lib
  exposed-modules:      Prelude
                      , Bootstrap
                      , Bot.Client
                      , Bot.Types
                      , Config
                      , Ipip.Parsers
                      , Ipip.Types
                      , Types
  autogen-modules:      Paths_mtl_classy_prism
  other-modules:        Paths_mtl_classy_prism
  ghc-options:          -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-language:     Haskell2010

executable mtl-classy-prism
  import:               lang, deps
  main-is:              Main.hs
  hs-source-dirs:       src/app
  default-language:     Haskell2010
  ghc-options:          -Wall -threaded
  build-depends:        mtl-classy-prism

common test-deps
  build-depends:      mtl-classy-prism
                    , hedgehog
                    , tasty
                    , tasty-hedgehog
                    , tasty-hunit

test-suite tests
  import:             lang, deps, test-deps
  type:               exitcode-stdio-1.0
  main-is:            tests.hs
  hs-source-dirs:     src/test
  other-modules:      Bot.TypeTest
                    , ConfigTest
                    , Ipip.ParserTest
                    , Utils
                    , Paths_mtl_classy_prism
  default-language:   Haskell2010
  autogen-modules:    Paths_mtl_classy_prism
  ghc-options:        -Wall -threaded